--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <div class="produktova-karta">
+    <div class="product-card">
       <span class="bestseller">Bestseller</span>
-      <span class="produkt-roku">Produkt roku 2023</span>
-      <span class="sleva">−25 %</span>
+      <span class="product-year">Produkt roku 2023</span>
+      <span class="discount">−25 %</span>
       <div class="product-image-container">
         <img
           src="https://jazztest.ibyznys.cz/www/obrazky/large/__avif/HPPAV.avif"
